# bluerov_ros_playground

./: CMakeLists.txt  README.md  gazebo.sh  main.py  package.xml  pubs.py  setup.py  subs.py  user.py
config/: bluerov2_thrusters.yaml
doc/: topics_and_data.md
launch/: bluerov2_node.launch  gazebo.launch  gazebo_sitl.launch  gazebo_teleop.launch  mav_pluginlists.yaml  rviz.launch  user_mav.launch  video.launch
model/: BlueRov2.urdf  BlueRov2.urdf.xacro  BlueRov2_thrusters.urdf  model.rviz
model/BlueRov2/: BlueRov2.sdf  model.config
src/bluerov/: gazebo_teleop.py  pubs.py  sitl.py  subs.py  user.py  video.py
src/bridge/: README.md  bluerov_node.py  bridge.py  frame.py  node  node.py
src/user/: pubs.py  subs.py  user.py  video.py
worlds/: underwater.world
